[package]
name = "colori"
description = "A simple and basic color conversion and manipulation library"
keywords = ["color", "conversion", "rgb", "hsl", "color-names"]
categories = ["graphics", "gui"]
version = "0.1.1"
authors = ["TorbenKoehn <t.koehn@outlook.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
